<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LocationScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/curLocation"
        android:paddingBottom="20dp"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/tempAndIconContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/curLocation"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/tempContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:paddingRight="20dp"
            android:paddingLeft="0dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/curTemp"
                android:textStyle="bold"
                android:textSize="24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minMaxTemp"/>

        </LinearLayout>

         <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/icon"
            android:adjustViewBounds="false" />
     </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/conditionDesc"
        android:layout_below="@+id/tempAndIconContainer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:capitalize="sentences" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:id="@+id/humidityLabel"
        android:layout_below="@+id/conditionDesc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/humidity"
        android:layout_toEndOf="@+id/windDirectionLabel"
        android:layout_above="@+id/windSpeed"
        android:layout_toRightOf="@+id/windDirectionLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/windSpeed"
        android:layout_alignTop="@+id/windSpeedLabel"
        android:layout_toRightOf="@+id/windDirectionLabel"
        android:layout_toEndOf="@+id/windDirectionLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windSpeed"
        android:id="@+id/windSpeedLabel"
        android:layout_below="@+id/humidityLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windGust"
        android:id="@+id/windGustLabel"
        android:layout_below="@+id/windSpeedLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/windGust"
        android:layout_above="@+id/windDirection"
        android:layout_alignLeft="@+id/windDirection"
        android:layout_alignStart="@+id/windDirection" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windDirection"
        android:id="@+id/windDirectionLabel"
        android:layout_below="@+id/windGustLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="0dp"
        android:paddingRight="5dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/windDirection"
        android:layout_toEndOf="@+id/windDirectionLabel"
        android:layout_above="@+id/enterLocation"
        android:layout_toRightOf="@+id/windDirectionLabel" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/enterLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/windDirectionLabel"
        android:paddingTop="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationName"
            android:id="@+id/locationNameLabel"
            android:paddingLeft="0dp"
            android:paddingRight="5dp"
            android:onClick="clearError"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enterLocationTextField"/>
    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getWeatherButton"
        android:id="@+id/getWeatherButton"
        android:layout_below="@+id/enterLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="getWeatherForLocation"/>


</RelativeLayout>
